--- a/package.json
+++ b/package.json
@@ -27,8 +27,14 @@
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.43.2",
-    "react-icons": "^4.7.1",
+    "react-icons": "^4.9.0",
+    "react-toastify": "^9.1.3",
+    "sass": "^1.62.1",
     "typescript": "4.9.5"
   },
-  "devDependencies": {}
+  "prettier": {
+    "semi": false,
+    "singleQuote": true,
+    "trailingComma": "es5"
+  }
 }
